--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-numpy==1.19.2
+lnumpy==1.19.2
 spacy_streamlit==1.0.0
 streamlit==0.77.0
 seaborn==0.11.1
 sentence_transformers==0.4.1.2
 matplotlib==3.2.2
-spacy==2.2.0
+
 plotly==4.14.3
 pandas==1.2.2
 Pillow==8.2.0
+spacy>=2.2.0,<3.0.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz#egg=en_core_web_sm
+https://github.com/explosion/spacy-models/releases/download/en_core_web_md-1.2.1/en_core_web_md-1.2.1.tar.gz
+https://github.com/explosion/spacy-models/releases/download/de_core_news_md-1.0.0/de_core_news_md-1.0.0.tar.gz
